--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header>
-		<h1>Blues, Thunberg say EU climate law lacks ambition</h1>
+		<h1>Greens, Thunberg say EU climate law lacks ambition</h1>
 		<p>Samuel Petrequin</p>
 		<p>Reporter with The Associated Press, currently in Brussels, covering news and sports</p>
 		<p><a href="#">@sampetrequin</a></p>
